--- a/index.html
+++ b/index.html
@@ -5,32 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+ 
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="./src/css/index.css">
+  
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <main>
+        <div class="prod__img">
+            <img src="./src/images/image-product-mobile.jpg" alt="">
+        </div>
+        <div class="container">
+            <div class="prod__label">
+                <p>p e r f u m e</p>
+            </div>
+            <div class="prod__title">
+                <h1>gabrielle essence</h1>
+                <h1>eau de parfum</h1>
+            </div>
+            <div class="prod__description">
+                <p>A floral, solar and vouptuous</p>
+                <p>interpretation composed by Olivier</p>
+                <p>Polge, Perfurmer-Creator for the House of</p>
+                <p>Chanel</p>
+            </div>
+            <div class="prod__prices">
+                <div class="discount__price">
+                    <p>$149.99</p>
+                </div>
+                <div class="first__price">
+                    <p>$169.99</p>
+                </div>
+            </div>
+            <div class="btn">
+                <button>🛒 Add to Cart</button>
+            </div>
+        </div>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="#">MConcu</a>.
+          </div>
+    </main>  
 </body>
 </html>
